[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/Settings/CustomGUINodes/RebindButtonContainer.gd" type="Script" id=1]
[ext_resource path="res://GUI/Settings/CustomGUINodes/RebindButton.tscn" type="PackedScene" id=2]

[node name="RebindButtonContainer" type="HBoxContainer"]
margin_right = 469.0
margin_bottom = 40.0
size_flags_horizontal = 7
custom_constants/separation = 10
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 13.0
margin_bottom = 27.0

[node name="RebindButton" parent="." instance=ExtResource( 2 )]
margin_left = 10.0
margin_right = 469.0
margin_bottom = 40.0
size_flags_horizontal = 3

[connection signal="resized" from="Label" to="." method="_on_Label_resized"]
[connection signal="changed_key" from="RebindButton" to="." method="_changed_key"]
